2017-02-21  Commit Queue  <commit-queue@webkit.org>

        Unreviewed, rolling out r212768.
        https://bugs.webkit.org/show_bug.cgi?id=168698

        Rolling out since this would break other projects. (Requested
        by aakashjain on #webkit).

        Reverted changeset:

        "[iOS] Remove old WebKit1 MemoryMeasure helper."
        https://bugs.webkit.org/show_bug.cgi?id=168675
        http://trac.webkit.org/changeset/212768

2017-02-21  Andreas Kling  <akling@apple.com>

        [iOS] Remove old WebKit1 MemoryMeasure helper.
        <https://webkit.org/b/168675>

        Reviewed by Sam Weinig.

        Remove the MemoryMeasure logging helper from the WebKit1 days. It was using an old way
        of measuring memory, and we were only using it in a single place anyway.

        * Misc/MemoryMeasure.h: Removed.
        * Misc/MemoryMeasure.mm: Removed.
        * WebKit.iOS.exp:

2017-02-21  Andreas Kling  <akling@apple.com>

        [iOS] WebKit1 should use shared memory pressure handler code.
        <https://webkit.org/b/168653>

        Reviewed by Antti Koivisto.

        * Misc/WebUIKitSupport.mm:
        (WebKitInitialize): Don't unconditionally install a memory warning handler just
        because the framework is loaded.

2017-02-20  Alexey Proskuryakov  <ap@apple.com>

        List of WebCore symbols to re-export from WebKitLegacy should be built automatically
        https://bugs.webkit.org/show_bug.cgi?id=168342
        rdar://problem/26182266

        Reviewed by Tim Horton.

        * WebKit.iOS.exp: Removed manually added symbols.

2017-02-20  Aakash Jain  <aakash_jain@apple.com>

        Stop exporting WebPluginController from WebKit
        https://bugs.webkit.org/show_bug.cgi?id=168603

        Reviewed by Alexey Proskuryakov.

        * WebKit.iOS.exp:

2017-02-10  Aakash Jain  <aakash_jain@apple.com>

        WebKitLegacy doesn't re-export various symbols from WebCore required by clients