@@ -1,8 +1,12 @@
+.objc_class_name_WKQuadObject
+.objc_class_name_WebFixedPositionContent
+.objc_class_name_WebGeolocation
 .objc_class_name_WebGeolocationProviderIOS
 .objc_class_name_WebMIMETypeRegistry
 .objc_class_name_WebPDFView
 .objc_class_name_WebPDFViewPlaceholder
 .objc_class_name_WebSelectionRect
+.objc_class_name_WebVisiblePosition
 _WebDatabaseOriginsDidChangeNotification
 _WebKitCreatePathWithShrinkWrappedRects
 _WebKitGetLastLineBreakInBuffer
