@@ -1,3 +1,12 @@
+2017-02-22  Aakash Jain  <aakash_jain@apple.com>
+
+        Move iOS specific symbols to WebKit.ios.exp
+        https://bugs.webkit.org/show_bug.cgi?id=168726
+
+        Reviewed by Alexey Proskuryakov.
+
+        * WebKit.iOS.exp:
+
 2017-02-21  Commit Queue  <commit-queue@webkit.org>
 
         Unreviewed, rolling out r212768.
